--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -45,10 +45,10 @@ msgid ""
 "search function is not registered, do nothing. Return 0 on success. Raise an "
 "exception and return -1 on error."
 msgstr ""
-"Anula el registro de una función de búsqueda de códecs y borra el "
-"caché del registro. Si la función de búsqueda no está registrada, no hace "
-"nada. Retorna 0 en caso de éxito. Lanza una excepción y devuelva -1 en "
-"caso de error."
+"Anula el registro de una función de búsqueda de códecs y borra el caché del "
+"registro. Si la función de búsqueda no está registrada, no hace nada. "
+"Retorna 0 en caso de éxito. Lanza una excepción y devuelva -1 en caso de "
+"error."
 
 #: ../Doc/c-api/codec.rst:23
 msgid ""
