--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-21 14:50-0300\n"
+"PO-Revision-Date: 2021-10-21 16:45-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -72,7 +72,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:41
 msgid "Define the ``PYLONG_BITS_IN_DIGIT`` to ``15`` or ``30``."
-msgstr ""
+msgstr "Define el ``PYLONG_BITS_IN_DIGIT`` en ``15`` o ``30``."
 
 #: ../Doc/using/configure.rst:43
 msgid "See :data:`sys.int_info.bits_per_digit <sys.int_info>`."
@@ -86,7 +86,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:53
 msgid "Set the Python executable suffix to *SUFFIX*."
-msgstr ""
+msgstr "Establece el sufijo ejecutable de Python en *SUFFIX*."
 
 #: ../Doc/using/configure.rst:55
 msgid ""
@@ -132,15 +132,15 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:85
 msgid "``ndbm``;"
-msgstr ""
+msgstr "``ndbm``;"
 
 #: ../Doc/using/configure.rst:86
 msgid "``gdbm``;"
-msgstr ""
+msgstr "``gdbm``;"
 
 #: ../Doc/using/configure.rst:87
 msgid "``bdb``."
-msgstr ""
+msgstr "``bdb``."
 
 #: ../Doc/using/configure.rst:91
 msgid "Disable C locale coercion to a UTF-8 based locale (enabled by default)."
@@ -182,7 +182,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:121
 msgid "Install Options"
-msgstr ""
+msgstr "Opciones de intalación"
 
 #: ../Doc/using/configure.rst:125
 msgid ""
@@ -210,7 +210,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:143
 msgid "Performance options"
-msgstr ""
+msgstr "Opciones de desempeño"
 
 #: ../Doc/using/configure.rst:145
 msgid ""
@@ -249,7 +249,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:170
 msgid "Default: ``-m test --pgo --timeout=$(TESTTIMEOUT)``."
-msgstr ""
+msgstr "Por defecto: ``-m test --pgo --timeout=$(TESTTIMEOUT)``."
 
 #: ../Doc/using/configure.rst:176
 msgid "Enable Link Time Optimization (LTO) in any build (disabled by default)."
@@ -588,7 +588,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:421
 msgid "``fnv``;"
-msgstr ""
+msgstr "``fnv``;"
 
 #: ../Doc/using/configure.rst:427
 msgid "Built-in hash modules:"
@@ -596,19 +596,19 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:429
 msgid "``md5``;"
-msgstr ""
+msgstr "``md5``;"
 
 #: ../Doc/using/configure.rst:430
 msgid "``sha1``;"
-msgstr ""
+msgstr "``sha1``;"
 
 #: ../Doc/using/configure.rst:431
 msgid "``sha256``;"
-msgstr ""
+msgstr "``sha256``;"
 
 #: ../Doc/using/configure.rst:432
 msgid "``sha512``;"
-msgstr ""
+msgstr "``sha512``;"
 
 #: ../Doc/using/configure.rst:433
 msgid "``sha3`` (with shake);"
@@ -616,7 +616,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:434
 msgid "``blake2``."
-msgstr ""
+msgstr "``blake2``."
 
 #: ../Doc/using/configure.rst:440
 msgid "Override the OpenSSL default cipher suites string:"
@@ -672,39 +672,39 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:477
 msgid "Options:"
-msgstr ""
+msgstr "Opciones:"
 
 #: ../Doc/using/configure.rst:479
 msgid "``universal2``;"
-msgstr ""
+msgstr "``universal2``;"
 
 #: ../Doc/using/configure.rst:480
 msgid "``32-bit``;"
-msgstr ""
+msgstr "``32-bit``;"
 
 #: ../Doc/using/configure.rst:481
 msgid "``64-bit``;"
-msgstr ""
+msgstr "``64-bit``;"
 
 #: ../Doc/using/configure.rst:482
 msgid "``3-way``;"
-msgstr ""
+msgstr "``3-way``;"
 
 #: ../Doc/using/configure.rst:483
 msgid "``intel``;"
-msgstr ""
+msgstr "``intel``;"
 
 #: ../Doc/using/configure.rst:484
 msgid "``intel-32``;"
-msgstr ""
+msgstr "``intel-32``;"
 
 #: ../Doc/using/configure.rst:485
 msgid "``intel-64``;"
-msgstr ""
+msgstr "``intel-64``;"
 
 #: ../Doc/using/configure.rst:486
 msgid "``all``."
-msgstr ""
+msgstr "``all``."
 
 #: ../Doc/using/configure.rst:490
 msgid ""
@@ -722,16 +722,17 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:500
 msgid ":file:`configure.ac` => :file:`configure`;"
-msgstr ""
+msgstr ":file:`configure.ac` => :file:`configure`;"
 
 #: ../Doc/using/configure.rst:501
 msgid ""
 ":file:`Makefile.pre.in` => :file:`Makefile` (created by :file:`configure`);"
 msgstr ""
+":file:`Makefile.pre.in` => :file:`Makefile` (creado por :file:`configure`);"
 
 #: ../Doc/using/configure.rst:502
 msgid ":file:`pyconfig.h` (created by :file:`configure`);"
-msgstr ""
+msgstr ":file:`pyconfig.h` (creado por :file:`configure`);"
 
 #: ../Doc/using/configure.rst:503
 msgid ""
@@ -819,7 +820,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:539
 msgid "C extensions"
-msgstr ""
+msgstr "Extensiones C"
 
 #: ../Doc/using/configure.rst:541
 msgid ""
@@ -939,7 +940,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:635
 msgid "Default: ``$(CC)``."
-msgstr ""
+msgstr "Por defecto: ``$(CC)``."
 
 #: ../Doc/using/configure.rst:639
 msgid "C++ compiler command."
@@ -1105,7 +1106,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:788
 msgid "Example: ``-lrt``."
-msgstr ""
+msgstr "Ejemplo: ``-lrt``."
 
 #: ../Doc/using/configure.rst:792
 msgid "Command to build a shared library."
