--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-21 16:45-0300\n"
+"PO-Revision-Date: 2021-10-21 21:11-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,6 +37,8 @@ msgid ""
 "See also the :file:`Misc/SpecialBuilds.txt` in the Python source "
 "distribution."
 msgstr ""
+"Consultar también :file:`Misc/SpecialBuilds.txt` en la distribución fuente "
+"de Python source distribution."
 
 #: ../Doc/using/configure.rst:17
 msgid "General Options"
@@ -47,28 +49,38 @@ msgid ""
 "Support loadable extensions in the :mod:`_sqlite` extension module (default "
 "is no)."
 msgstr ""
+"Admite extensiones cargables en el módulo de extensión :mod:`_sqlite` (el "
+"valor por defecto es no)."
 
 #: ../Doc/using/configure.rst:24
 msgid ""
 "See the :meth:`sqlite3.Connection.enable_load_extension` method of the :mod:"
 "`sqlite3` module."
 msgstr ""
+"Consultar el método :meth:`sqlite3.Connection.enable_load_extension` del "
+"módulo :mod:`sqlite3`."
 
 #: ../Doc/using/configure.rst:31
 msgid ""
 "Disable IPv6 support (enabled by default if supported), see the :mod:"
 "`socket` module."
 msgstr ""
+"Deshabilita la compatibilidad con IPv6 (habilitada de forma predeterminada "
+"si es compatible), consulte el módulo :mod:`socket`."
 
 #: ../Doc/using/configure.rst:36
 msgid "Define the size in bits of Python :class:`int` digits: 15 or 30 bits."
 msgstr ""
+"Define el tamaño en bits de los dígitos :class:`int` de Python: 15 o 30 bits."
 
 #: ../Doc/using/configure.rst:38
 msgid ""
 "By default, the number of bits is selected depending on ``sizeof(void*)``: "
 "30 bits if ``void*`` size is 64-bit or larger, 15 bits otherwise."
 msgstr ""
+"De forma predeterminada, el número de bits se selecciona según "
+"``sizeof(void*)``: 30 bits si el tamaño de ``void*`` es de 64 bits o mayor, "
+"15 bits en caso contrario."
 
 #: ../Doc/using/configure.rst:41
 msgid "Define the ``PYLONG_BITS_IN_DIGIT`` to ``15`` or ``30``."
@@ -76,13 +88,15 @@ msgstr "Define el ``PYLONG_BITS_IN_DIGIT`` en ``15`` o ``30``."
 
 #: ../Doc/using/configure.rst:43
 msgid "See :data:`sys.int_info.bits_per_digit <sys.int_info>`."
-msgstr ""
+msgstr "Consultar :data:`sys.int_info.bits_per_digit <sys.int_info>`."
 
 #: ../Doc/using/configure.rst:48
 msgid ""
 "Compile the Python ``main()`` function and link Python executable with C++ "
 "compiler: ``$CXX``, or *COMPILER* if specified."
 msgstr ""
+"Compila la función de Python ``main()`` y vincula el ejecutable de Python "
+"con el compilador de C++: ``$CXX``, o *COMPILER* si se especifica."
 
 #: ../Doc/using/configure.rst:53
 msgid "Set the Python executable suffix to *SUFFIX*."
@@ -93,6 +107,9 @@ msgid ""
 "The default suffix is ``.exe`` on Windows and macOS (``python.exe`` "
 "executable), and an empty string on other platforms (``python`` executable)."
 msgstr ""
+"El sufijo por defecto es ``.exe`` en Windows y macOS (ejecutable ``python."
+"exe``), y una cadena de caracteres vacía en otras plataformas (ejecutable "
+"``python``)."
 
 #: ../Doc/using/configure.rst:60
 msgid ""
@@ -1065,7 +1082,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:749
 msgid "Default: ``$(PURIFY) $(MAINCC)``."
-msgstr ""
+msgstr "Por defecto: ``$(PURIFY) $(MAINCC)``."
 
 #: ../Doc/using/configure.rst:753
 msgid ""
@@ -1122,15 +1139,15 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:800
 msgid "Default: ``@BLDSHARED@ $(PY_CORE_LDFLAGS)``."
-msgstr ""
+msgstr "Por defecto: ``@BLDSHARED@ $(PY_CORE_LDFLAGS)``."
 
 #: ../Doc/using/configure.rst:804
 msgid "Default: ``$(CONFIGURE_LDFLAGS) $(LDFLAGS)``."
-msgstr ""
+msgstr "Por defecto: ``$(CONFIGURE_LDFLAGS) $(LDFLAGS)``."
 
 #: ../Doc/using/configure.rst:808
 msgid "Default: ``$(CONFIGURE_LDFLAGS_NODIST) $(LDFLAGS_NODIST)``."
-msgstr ""
+msgstr "Por defecto: ``$(CONFIGURE_LDFLAGS_NODIST) $(LDFLAGS_NODIST)``."
 
 #: ../Doc/using/configure.rst:814
 msgid "Linker flags used for building the interpreter object files."
