--- a/c-api/veryhigh.po
+++ b/c-api/veryhigh.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-20 20:30+0200\n"
+"PO-Revision-Date: 2021-10-22 06:56+0200\n"
 "Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -207,10 +207,10 @@ msgid ""
 "``PyRun_SimpleFileExFlags()`` returns."
 msgstr ""
 "Similar a :c:func:`PyRun_SimpleStringFlags`, pero el código fuente de Python "
-"se lee desde *fp* en lugar de una cadena en memoria. *filename* debe ser el "
-"nombre del fichero, se decodifica desde :term:`filesystem encoding and error "
-"handler`. Si *closeit* es verdadero, el fichero se cierra antes de que "
-"``PyRun_SimpleFileExFlags()`` retorne."
+"se lee desde *fp* en lugar de una cadena de carácteres en memoria. "
+"*filename* debe ser el nombre del fichero, se decodifica desde :term:"
+"`filesystem encoding and error handler`. Si *closeit* es verdadero, el "
+"fichero se cierra antes de que ``PyRun_SimpleFileExFlags()`` retorne."
 
 #: ../Doc/c-api/veryhigh.rst:120
 msgid ""
@@ -399,10 +399,10 @@ msgid ""
 "`PyRun_FileExFlags` returns."
 msgstr ""
 "Similar a :c:func:`PyRun_StringFlags`, pero el código fuente de Python se "
-"lee de *fp* en lugar de una cadena en memoria. *filename* debe ser el nombre "
-"del fichero, es decodificado desde el :term:`filesystem encoding and error "
-"handler`. Si *closeit* es verdadero, el fichero se cierra antes de que :c:"
-"func:`PyRun_FileExFlags` retorne."
+"lee de *fp* en lugar de una cadena de carácteres en memoria. *filename* debe "
+"ser el nombre del fichero, es decodificado desde el :term:`filesystem "
+"encoding and error handler`. Si *closeit* es verdadero, el fichero se cierra "
+"antes de que :c:func:`PyRun_FileExFlags` retorne."
 
 #: ../Doc/c-api/veryhigh.rst:235
 msgid ""
