--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-16 17:27+0200\n"
+"PO-Revision-Date: 2021-10-18 22:40-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/codec.rst:4
 msgid "Codec registry and support functions"
@@ -44,6 +45,10 @@ msgid ""
 "search function is not registered, do nothing. Return 0 on success. Raise an "
 "exception and return -1 on error."
 msgstr ""
+"Anula el registro de una función de búsqueda de códecs y borra el caché del "
+"registro. Si la función de búsqueda no está registrada, no hace nada. "
+"Retorna 0 en caso de éxito. Lanza una excepción y devuelva -1 en caso de "
+"error."
 
 #: ../Doc/c-api/codec.rst:23
 msgid ""
